TestCases/Errors/threaded_movement/observations/win_11_obs.spm
 obs   15-5   0 
 obs   16-5   0 
 obs   15-6   0.000108394356635811 
 obs   16-6   4.63155944606549e-05 
 obs   15-7   0.000210556973261126 
 obs   16-7   0 
 obs   14-8   0.000404232900590577 
 obs   15-8   0.000432525951557093 
 obs   3-14   0.0605833333333333 
 obs   4-14   0.00590551181102362 
 obs   6-14   0.00459656084656085 
 obs   5-15   0.0142204305045889 
 obs   6-15   0.00818713450292398 
 obs   6-16   0.00490646490999705 
 obs   7-17   0.0167171600706594 
 obs   8-17   0.0203579318667038 
 obs   9-17   0.0147368421052632 
 obs   7-18   0.0131320754716981 
 obs   8-18   0.0231896751699484 
 obs   9-18   0.0226211241673703 
 obs   7-19   0.00540540540540541 
 obs   8-19   0.0327777777777778 
 obs   9-19   0.0341774056353004 
 obs   10-19   0.0027032774462442 
 obs   11-19   0.005706432650942 
 obs   8-20   0.0103636363636364 
 obs   9-20   0.00384313725490196 
 error_value   15-5   0 
 error_value   16-5   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   14-8   0 
 error_value   15-8   0 
 error_value   3-14   0 
 error_value   4-14   0 
 error_value   6-14   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-17   0 
 error_value   8-17   0 
 error_value   9-17   0 
 error_value   7-18   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   7-19   0 
 error_value   8-19   0 
 error_value   9-19   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   8-20   0 
 error_value   9-20   0 
